# slack-bolt-ai-apps-test

./: .env.example  .gitignore  .mise.toml  Dockerfile  Makefile  README.md  Taskfile.yml  deploy.sh  main.py  manifest.json  manifest.yaml  pyproject.toml  requirements.txt  setup.sh  validate_config.py
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml
app/: __init__.py  gemini_client.py
listeners/: __init__.py  assistant.py  message_listener.py
tests/: test_gemini_client.py  test_message_listeners.py
